--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.uottawa.benjaminmacdonald.quicktings.CheckoutActivity">
+    tools:context="com.uottawa.benjaminmacdonald.quicktings.Activities.CheckoutActivity">
 
 </android.support.constraint.ConstraintLayout>
