--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,6 +6,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/testSearch"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="hello_search_fragment" />
