--- a/app/src/main/res/layout/card_product.xml
+++ b/app/src/main/res/layout/card_product.xml
@@ -6,24 +6,25 @@
     android:weightSum="1">
 
     <android.support.v7.widget.CardView
-        android:layout_width="130dp"
-        android:layout_height="160dp"
-        android:layout_weight="0.02"
+        android:layout_width="151dp"
+        android:layout_height="207dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="12dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="134dp"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:weightSum="1">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.74"
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView"
+                    android:id="@+id/productImage"
                     android:layout_width="46dp"
                     android:layout_height="match_parent"
                     app:srcCompat="@drawable/ic_menu_gallery" />
@@ -37,37 +38,51 @@
 
                     <Button
                         android:id="@+id/favouriteButton"
-                        android:layout_width="40dp"
+                        android:layout_width="36dp"
                         android:layout_height="wrap_content"
                         android:background="@drawable/custom_favourite_button"
                         android:rotation="0"
-                        android:layout_weight="0.37" />
+                        android:layout_weight="0.15" />
 
-                    <TextView
-                        android:id="@+id/productTitle"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Palm Bay"
-                        android:textColor="@android:color/black"
-                        android:textSize="18sp" />
+                        android:layout_weight="0.37"
+                        android:orientation="vertical"
+                        android:paddingLeft="6dp">
 
-                    <TextView
-                        android:id="@+id/productType"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Cocktail" />
+                        <TextView
+                            android:id="@+id/productTitle"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Palm Bay"
+                            android:textColor="@android:color/black"
+                            android:textSize="18sp" />
 
-                    <TextView
-                        android:id="@+id/productPrice"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="$5.99"
-                        android:textColor="@android:color/black"
-                        android:textSize="18sp" />
+                        <TextView
+                            android:id="@+id/productType"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Cocktail" />
+
+                        <TextView
+                            android:id="@+id/productPrice"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:text="$5.99"
+                            android:textColor="@android:color/black"
+                            android:textSize="18sp" />
+                    </LinearLayout>
 
                 </LinearLayout>
             </LinearLayout>
+
+            <ImageView
+                android:id="@+id/wavesImage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@android:drawable/ic_menu_gallery" />
 
         </LinearLayout>
 
