--- a/app/src/main/res/drawable/round_borders.xml
+++ b/app/src/main/res/drawable/round_borders.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <corners android:radius="3dp"/>
-    <padding android:left="5dp" android:right="5dp" android:top="5dp" android:bottom="5dp"/>
-    <stroke android:width="1dp" android:color="#BDBDBD"/>
+    <padding android:left="5dp" android:right="5dp" android:top="0dp" android:bottom="0dp"/>
+    <stroke android:width="1dp" android:color="@color/colorAccent"/>
 </shape>
