--- a/app/src/main/res/layout/card_discover.xml
+++ b/app/src/main/res/layout/card_discover.xml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="1">
 
+    <android.support.v7.widget.CardView
+        android:layout_width="224dp"
+        android:layout_height="132dp"
+        android:layout_weight="0.02"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="12dp" >
+
+        <ImageButton
+            android:id="@+id/discoverButton"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/ic_menu_gallery" />
+    </android.support.v7.widget.CardView>
 </LinearLayout>
