--- a/app/src/main/res/layout/card_search_result.xml
+++ b/app/src/main/res/layout/card_search_result.xml
@@ -8,8 +8,7 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.05">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -20,8 +19,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.35"
-                android:orientation="horizontal">
+                android:layout_marginBottom="5dp"
+                android:orientation="horizontal"
+                android:paddingLeft="10dp">
 
                 <ImageView
                     android:id="@+id/productImage"
@@ -31,44 +31,31 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_height="112dp"
+                    android:orientation="vertical"
+                    android:paddingLeft="17dp"
+                    android:paddingTop="10dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:layout_marginBottom="15dp"
+                        android:orientation="vertical">
 
-                        <LinearLayout
-                            android:layout_width="229dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="13.63"
-                            android:orientation="vertical"
-                            android:paddingLeft="5dp"
-                            android:paddingTop="7dp">
+                        <TextView
+                            android:id="@+id/productTitle"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Beau's Lug Tread Lagered Ale"
+                            android:textColor="@android:color/black"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
 
-                            <TextView
-                                android:id="@+id/productTitle"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="Beau's Lug Tread Lagered Ale"
-                                android:textColor="@android:color/black"
-                                android:textSize="18sp" />
-
-                            <TextView
-                                android:id="@+id/productType"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="Beer" />
-                        </LinearLayout>
-
-                        <Button
-                            android:id="@+id/favouriteButton"
-                            android:layout_width="31dp"
-                            android:layout_height="54dp"
-                            android:layout_weight="2.73"
-                            android:background="@drawable/custom_favourite_button" />
-
+                        <TextView
+                            android:id="@+id/productType"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Beer" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -78,11 +65,10 @@
                         android:weightSum="1">
 
                         <LinearLayout
-                            android:layout_width="96dp"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.40"
-                            android:orientation="vertical"
-                            android:paddingLeft="5dp">
+                            android:orientation="vertical">
 
                             <TextView
                                 android:id="@+id/productPrice"
@@ -90,7 +76,8 @@
                                 android:layout_height="wrap_content"
                                 android:text="$24.99"
                                 android:textColor="@android:color/black"
-                                android:textSize="18sp" />
+                                android:textSize="18sp"
+                                android:textStyle="bold" />
 
                             <TextView
                                 android:id="@+id/productVolume"
@@ -98,13 +85,6 @@
                                 android:layout_height="wrap_content"
                                 android:text="500 mL bottle" />
                         </LinearLayout>
-
-                        <Button
-                            android:id="@+id/addToCartButton"
-                            android:layout_width="wrap_content"
-                            android:layout_height="34dp"
-                            android:background="@drawable/round_borders"
-                            android:text="Add to Cart" />
 
                     </LinearLayout>
 
@@ -115,7 +95,6 @@
                 android:id="@+id/wavesImage"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
-                android:layout_marginTop="20dp"
                 android:layout_weight="0.20"
                 app:srcCompat="@android:drawable/ic_menu_gallery" />
         </LinearLayout>
