--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,17 +3,17 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_payment"
-            android:title="Payment" />
+            android:id="@+id/nav_orders"
+            android:title="Orders" />
         <item
-            android:id="@+id/nav_your_orders"
-            android:title="Your Orders" />
-        <item
-            android:id="@+id/nav_help"
-            android:title="Help" />
+            android:id="@+id/nav_cart"
+            android:title="Cart" />
         <item
             android:id="@+id/nav_settings"
             android:title="Settings" />
+        <item
+            android:id="@+id/nav_help"
+            android:title="Help" />
     </group>
 
 </menu>
