--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,37 +1,35 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.uottawa.benjaminmacdonald.quicktings.Fragments.SearchFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
+    <android.support.v7.widget.CardView
+        android:id="@+id/map_toolbar_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        app:cardBackgroundColor="@android:color/transparent">
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/map_toolbar_container"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/wld_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp">
+            android:background="?attr/colorPrimaryDark"
+            android:minHeight="?attr/actionBarSize" />
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/wld_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?attr/colorPrimary"
-                android:minHeight="?attr/actionBarSize"/>
+    </android.support.v7.widget.CardView>
 
-        </android.support.v7.widget.CardView>
+    <ListView
+        android:id="@+id/productListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:clipToPadding="false"
+        android:divider="@android:color/transparent"
+        android:paddingTop="70dp" />
 
-        <ListView
-            android:id="@+id/productListView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:divider="@android:color/transparent" />
-
-    </LinearLayout>
 
 </FrameLayout>
