--- a/app/src/main/res/layout/card_product.xml
+++ b/app/src/main/res/layout/card_product.xml
@@ -6,8 +6,11 @@
     android:weightSum="1">
 
     <android.support.v7.widget.CardView
-        android:layout_width="151dp"
-        android:layout_height="207dp"
+        android:layout_width="130dp"
+        android:layout_height="160dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="10dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="12dp">
 
@@ -19,7 +22,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="0.74"
                 android:orientation="horizontal">
 
@@ -32,57 +35,36 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="right"
+                    android:layout_weight="0.37"
+                    android:gravity="center_vertical"
                     android:orientation="vertical"
-                    android:weightSum="1">
+                    android:paddingLeft="6dp">
 
-                    <Button
-                        android:id="@+id/favouriteButton"
-                        android:layout_width="36dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.15"
-                        android:background="@drawable/custom_favourite_button"
-                        android:rotation="0" />
-
-                    <LinearLayout
+                    <TextView
+                        android:id="@+id/productTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.37"
-                        android:orientation="vertical"
-                        android:paddingLeft="6dp">
+                        android:text="Palm Bay"
+                        android:textColor="@android:color/black"
+                        android:textSize="18sp" />
 
-                        <TextView
-                            android:id="@+id/productTitle"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Palm Bay"
-                            android:textColor="@android:color/black"
-                            android:textSize="18sp" />
+                    <TextView
+                        android:id="@+id/productType"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Cocktail" />
 
-                        <TextView
-                            android:id="@+id/productType"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Cocktail" />
-
-                        <TextView
-                            android:id="@+id/productPrice"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:text="$5.99"
-                            android:textColor="@android:color/black"
-                            android:textSize="18sp" />
-                    </LinearLayout>
-
+                    <TextView
+                        android:id="@+id/productPrice"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="$5.99"
+                        android:textColor="@android:color/black"
+                        android:textSize="18sp" />
                 </LinearLayout>
-            </LinearLayout>
 
-            <ImageView
-                android:id="@+id/wavesImage"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:srcCompat="@android:drawable/ic_menu_gallery" />
+            </LinearLayout>
 
         </LinearLayout>
 
