--- a/app/src/main/res/layout/card_product.xml
+++ b/app/src/main/res/layout/card_product.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:weightSum="1">
 
     <android.support.v7.widget.CardView
         android:layout_width="130dp"
         android:layout_height="160dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="10dp"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="12dp">
+        android:layout_margin="10dp"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
