--- a/app/src/main/res/layout/card_search_result.xml
+++ b/app/src/main/res/layout/card_search_result.xml
@@ -25,7 +25,7 @@
 
                 <ImageView
                     android:id="@+id/productImage"
-                    android:layout_width="60dp"
+                    android:layout_width="80dp"
                     android:layout_height="112dp"
                     app:srcCompat="@drawable/ic_menu_gallery" />
 
@@ -46,6 +46,7 @@
                             android:id="@+id/productTitle"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:paddingRight="5dp"
                             android:text="Beau's Lug Tread Lagered Ale"
                             android:textColor="@android:color/black"
                             android:textSize="18sp"
