--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.uottawa.benjaminmacdonald.quicktings.Fragments.SearchFragment">
+    tools:context="com.uottawa.benjaminmacdonald.quicktings.Fragments.SearchFragment"
+    android:focusableInTouchMode="true">
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.CardView
@@ -18,7 +19,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimaryDark"
-            android:minHeight="?attr/actionBarSize" >
+            android:elevation="24dp"
+            android:minHeight="?attr/actionBarSize">
 
             <TextView
                 android:id="@+id/numResults"
