--- a/app/src/main/res/layout/card_search_result.xml
+++ b/app/src/main/res/layout/card_search_result.xml
@@ -2,103 +2,115 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/lightGrey"
     android:orientation="vertical"
     android:weightSum="1">
 
-    <android.support.v7.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal"
+        android:paddingLeft="10dp">
+
+        <ImageView
+            android:id="@+id/productImage"
+            android:layout_width="80dp"
+            android:layout_height="112dp"
+            app:srcCompat="@drawable/ic_menu_gallery" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="112dp"
             android:orientation="vertical"
-            android:weightSum="1">
+            android:paddingLeft="17dp"
+            android:paddingTop="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:orientation="horizontal"
-                android:paddingLeft="10dp">
+                android:layout_marginBottom="15dp"
+                android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/productImage"
-                    android:layout_width="80dp"
-                    android:layout_height="112dp"
-                    app:srcCompat="@drawable/ic_menu_gallery" />
+                <TextView
+                    android:id="@+id/productTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="5dp"
+                    android:text="Beau's Lug Tread Lagered Ale"
+                    android:textColor="@color/searchProductLabel"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/productType"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Beer"
+                    android:textColor="@color/searchProductLabel" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="1">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="112dp"
-                    android:orientation="vertical"
-                    android:paddingLeft="17dp"
-                    android:paddingTop="10dp">
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.40"
+                    android:orientation="vertical">
 
-                    <LinearLayout
+                    <TextView
+                        android:id="@+id/productPrice"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="15dp"
-                        android:orientation="vertical">
+                        android:text="$24.99"
+                        android:textColor="@color/searchProductLabel"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
-                        <TextView
-                            android:id="@+id/productTitle"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:paddingRight="5dp"
-                            android:text="Beau's Lug Tread Lagered Ale"
-                            android:textColor="@android:color/black"
-                            android:textSize="18sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/productType"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Beer" />
-                    </LinearLayout>
-
-                    <LinearLayout
+                    <TextView
+                        android:id="@+id/productVolume"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:weightSum="1">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0.40"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:id="@+id/productPrice"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="$24.99"
-                                android:textColor="@android:color/black"
-                                android:textSize="18sp"
-                                android:textStyle="bold" />
-
-                            <TextView
-                                android:id="@+id/productVolume"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="500 mL bottle" />
-                        </LinearLayout>
-
-                    </LinearLayout>
-
+                        android:text="500 mL bottle"
+                        android:textColor="@color/searchProductLabel" />
                 </LinearLayout>
+
             </LinearLayout>
 
-            <ImageView
-                android:id="@+id/wavesImage"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_weight="0.20"
-                app:srcCompat="@android:drawable/ic_menu_gallery" />
         </LinearLayout>
+    </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/lightGrey"
+        android:baselineAligned="false"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingLeft="8dp">
+
+        <TextView
+            android:id="@+id/productStock"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.95"
+            android:text="69 in stock near you"
+            android:textColor="@color/darkGrey" />
+
+        <ImageButton
+            android:id="@+id/favouriteButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.05"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_favorite_black_24dp"
+            android:tint="@color/notFavourite" />
+
+    </LinearLayout>
+
 </LinearLayout>
